Slider container and gaping fixed

--- a/public/assets/css/custom-style.css
+++ b/public/assets/css/custom-style.css
@@ -114,3 +114,6 @@ ul.cus-sub-menu {
         left: 50% !important;
     }
 }
+.mt-md-3, .my-md-3{
+    margin-top: 8px !important;
+}
